--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "chat-app-firebase",
+  "name": "fitness-firebase",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@googlemaps/js-api-loader": "^1.15.1",
+    "@material-ui/core": "4.11.0",
     "@react-firebase/auth": "^0.2.10",
     "@react-google-maps/api": "^2.18.1",
     "@reduxjs/toolkit": "^1.8.5",
